--- a/6dejaar/kinematica/knmtc_bgrppn_positie.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_positie.tex
@@ -101,7 +101,9 @@ Op verschillende tijdstippen $t_0,t_1, t_2,\ldots$ wordt weergegeven waar het sh
 
 
 
-% DE ZEILBOOT OP 1 LIJN
+% DE ZEILBOOT OP 1 LIJN ------------ % DE ZEILBOOT OP 1 LIJN ------ % DE ZEILBOOT OP 1 LIJN 
+% DE ZEILBOOT OP 1 LIJN ------------ % DE ZEILBOOT OP 1 LIJN ------ % DE ZEILBOOT OP 1 LIJN
+% DE ZEILBOOT OP 1 LIJN ------------ % DE ZEILBOOT OP 1 LIJN ------ % DE ZEILBOOT OP 1 LIJN
 \begin{image}[0.5\textwidth]
 \begin{tikzpicture}
 \begin{axis}[
@@ -141,6 +143,13 @@ In de natuurkunde is \textbf{tijd een dimensie}.\footnote{Einstaan gaf een besch
 In bovenstaande figuur wordt bovenaan aangegeven boven elke zeilboot op welk tijdstip de boot daar was waargenomen. 
 Zo bevindt de boot zich op \(t_3 = \SI{15}{s}\) op de positie \(\SI{20}{meter}\). 
 Deze informatie over de tijd kan worden weergegeven op een tijd-as. 
+
+
+
+
+% ZEILBOOT OP TIJDSAS ------ ZEILBOOT OP TIJDSAS ------ ZEILBOOT OP TIJDSAS 
+% ZEILBOOT OP TIJDSAS ------ ZEILBOOT OP TIJDSAS ------ ZEILBOOT OP TIJDSAS 
+% ZEILBOOT OP TIJDSAS ------ ZEILBOOT OP TIJDSAS ------ ZEILBOOT OP TIJDSAS 
 
 \begin{image}[0.5\textwidth]
 \begin{tikzpicture}
@@ -244,6 +253,8 @@ De positie van de zeilboot is enkel weergegeven voor een aantal specifieke momen
 	\end{axis}
 \end{tikzpicture}
 \end{image}	
+
+
 \begin{definition} 
 	De \textbf{plaatsfunctie} \(\vec{x}(t)\) geeft voor elke moment \(t\) de positievector \(x\). 
 	In één dimensie is \(\vec{x}\) een scalar en is de plaatsfuncie een grafiek waarop horizontaal de tijd wordt weergegeven en verticaal de positie. 
