remove onterecht commentaar

--- a/6dejaar/dynamica/nwtn_tweede_beginsel.tex
+++ b/6dejaar/dynamica/nwtn_tweede_beginsel.tex
@@ -50,12 +50,12 @@ De formulevorm van de tweede wet ziet er misschien gemakkelijk uit maar is in al
 
 In feite zit de eerste wet vervat in de tweede. Toch blijven we hem gebruiken, vooral om het concept traagheid te benadrukken.
 
-% \begin{denkvraag*}{}
-% 	Waar en hoe in het filmpje van Wile E. Coyote en de Road Runner wordt de tweede wet van Newton met de voeten getreden?
-% 	%\begin{center}
-% 		%\youtube{hvjAr6cHUVM}
-% 	%\end{center}
-% \end{denkvraag*}
+\begin{denkvraag*}{}
+	Waar en hoe in het filmpje van Wile E. Coyote en de Road Runner wordt de tweede wet van Newton met de voeten getreden?
+	\begin{center}
+		\youtube{hvjAr6cHUVM}
+	\end{center}
+\end{denkvraag*}
 
 \begin{exercise}
 	Een massa van \SI{2,0}{kg} bevindt zich in een lift aan een dynamometer. Die laatste duidt een kracht van \SI{10}{N} aan. Welke beweging voert de lift uit?
